--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "bs58": "^6.0.0",
     "chalk": "^5.4.1",
     "https-proxy-agent": "^7.0.6",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {}
 }
